change packege name

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.rafaelaaraujo.customAbasAndroid">
+    package="com.example.rafaelaaraujo.customTabsAndroid">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name="com.example.rafaelaaraujo.customAbasAndroid.activity.MainActivity">
+        <activity android:name="com.example.rafaelaaraujo.customTabsAndroid.activity.MainActivity">
         <intent-filter >
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
